--- a/src/App.scss
+++ b/src/App.scss
@@ -22,29 +22,31 @@
 
 .spandiv{
     margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    
 }
 
+
+
 .signinbox{
+  
     
-    padding: 8px;
-    margin-right: 130px;
+    // margin-right: 130px;
     font-size: 20px;
     font-weight: 600;
     
 }
 
 .creatacc{
+    
     color: rgb(133, 131, 131);
     font-weight: 200;
     font-size: 20px;
 
 }
-.form__group {
-    position: relative;
-    
-    
-    width: 100%;
-  }
+
 
 .inputField{
     width: 100%;
@@ -59,13 +61,7 @@
    
 
 }
-.labelIdEmail {
-    position: absolute;
-    top: 0;
-    display: block;
-    font-size: 30px;
-    color: gray;
-}
+
 
 .inputFieldpassword{
     
@@ -100,22 +96,10 @@
 
 }
 
-@media  (max-width :700px) {
+@media (max-width : 800px) {
     .contantdiv{
-        width: 90%;
         margin: 2px;
-        
+        width: 90%;
     }
-    .spandiv{
-
-    }
-
     
-}
-@media  (max-width :400px) {
-    .creatacc{
-        font-size: 16px;
-        margin-left: -70px;
-    }
-
 }
