--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 }
 
 .contantdiv{
