--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+
     
 }
 
@@ -34,7 +35,7 @@
 
 .signinbox{
   
-    
+    cursor: pointer;
     // margin-right: 130px;
     font-size: 20px;
     font-weight: 600;
@@ -42,11 +43,11 @@
 }
 
 .creatacc{
-    
+    cursor: pointer;
     color: rgb(133, 131, 131);
-    font-weight: 200;
+    font-weight: 400;
     font-size: 20px;
-
+    
 }
 
 
@@ -81,12 +82,13 @@
 
 .checkbox{
     margin-top: 40px;
+    cursor: pointer;
     
 }
 
 .passBut{
     padding: 0 80px;
-    
+    cursor: pointer;
     margin-top: 40px;
     height: 50px;
     width: 100%;
