--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+*,*::after,*::before{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: "Playfair Display", serif;
+}
+
 .mainbody{
     height: 95vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+   
 
 }
 
 .contantdiv{
     margin: 0;
     padding: 0;
-    height: 80%;
     width: 30%;
 }
 
@@ -19,7 +29,6 @@
     text-align: center;
     font-size: 40px;
     font-weight: 400;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .spandiv{
@@ -104,6 +113,14 @@
     .contantdiv{
         margin: 2px;
         width: 90%;
+        
+    }
+    
+}
+
+@media (max-widtg : 2560px) {
+    .contantdiv{
+        width: 50%;
     }
     
 }
